--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@iconscout/react-unicons": "^1.1.6",
-    "framer-motion": "^6.2.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "sweetalert2-react-content": "^4.2.0",
-    "universal-cookie": "^4.0.4"
+    "@iconscout/react-unicons": "1.1.6",
+    "framer-motion": "6.2.9",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "sweetalert2-react-content": "4.2.0",
+    "universal-cookie": "4.0.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.9.0"
+    "@vitejs/plugin-react": "1.0.7",
+    "vite": "2.9.0"
   }
 }
